[package]
name = "cap-media"
version = "0.1.0"
description = "A modular multimedia processing library"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-media-info = { path = "../media-info" }
ffmpeg.workspace = true
thiserror.workspace = true

[dev-dependencies]
inquire = "0.8.0"
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = "0.3.20"
