[package]
name = "cap-project"
version = "0.1.0"
edition = "2021"

[dependencies]
specta.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.127"
either = "1.13.0"
relative-path = { version = "1.9.3", features = ["serde"] }
# tauri = { workspace = true }
# tauri-plugin-store = "2.0.0-rc.4"
