[package]
name = "cap-project"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-cursor-info = { path = "../cursor-info" }

specta.workspace = true
serde = { workspace = true }

serde_json = "1.0.144"
either = "1.15.0"
relative-path = { version = "2.0.1", features = ["serde"] }
log = "0.4"
tracing = "0.1.41"
