[package]
name = "cap-recording"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-audio = { path = "../audio" }
cap-fail = { path = "../fail" }
cap-project = { path = "../project" }
cap-media = { path = "../media" }
cap-flags = { path = "../flags" }
cap-utils = { path = "../utils" }
scap-targets = { path = "../scap-targets" }
cap-cursor-capture = { path = "../cursor-capture" }
cap-media-encoders = { path = "../media-encoders" }
cap-media-info = { path = "../media-info" }
cap-cursor-info = { path = "../cursor-info" }
cap-camera = { path = "../camera" }
cap-camera-ffmpeg = { path = "../camera-ffmpeg" }

specta.workspace = true
tokio.workspace = true
flume.workspace = true
thiserror.workspace = true
ffmpeg = { workspace = true }

serde = { workspace = true }
serde_json = "1"
chrono = "0.4.38"
tracing.workspace = true
device_query = "4.0.1"
image = "0.25.2"
either = "1.13.0"
tracing-subscriber = { version = "0.3.19" }
relative-path = "1.9.3"
futures = { workspace = true }
tokio-util = "0.7.15"
sha2 = "0.10.9"
hex = "0.4.3"
ringbuf = "0.4.8"
cpal.workspace = true
indexmap = "2.10.0"
kameo = "0.17.2"
inquire = "0.7.5"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3.5"
cocoa = "0.26.0"
objc = "0.2.7"
cidre = { workspace = true }
objc2-app-kit = "0.3.1"
scap-screencapturekit = { path = "../scap-screencapturekit" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
] }
scap-direct3d = { path = "../scap-direct3d" }
scap-ffmpeg = { path = "../scap-ffmpeg" }
scap-cpal = { path = "../scap-cpal" }

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = "0.3.19"
